# lazyapi

./: LICENSE  README.md  pyproject.toml
docs/: lazyapi.md
src/lazyapi/: cli.py
src/lazyapi/init_repo_setup/: __init__.py  init_config.py  init_generators.py  init_initializer.py  init_scaled_structure.py  init_structure.py  init_validators.py
src/lazyapi/services/: __init__.py  file_operations.py  shell_executor.py
src/lazyapi/shared/: __init__.py  base_validator.py  content_generators.py  exceptions.py  interfaces.py
src/lazyapi/templates/: .env.example  Dockerfile  README.basic.md  README.scaled.md  core_config.py  docker-compose.dev.yml  main.py
src/lazyapi/templates/docker/: Dockerfile  docker-compose.dev.yml
