[project]
name = "lazyapi"
version = "0.1.0"
description = "A CLI tool for scaffolding FastAPI projects"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12.0",
    "ruff>=0.14.7",
]

[project.scripts]
lazyapi = "lazyapi.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/lazyapi"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
